2009-11-24  Till Kamppeter <till.kamppeter@gmail.com>

	* PPD/KONICA_MINOLTA/KO1050UX.ppd, PPD/KONICA_MINOLTA/KO500UX.ppd,
	  PPD/KONICA_MINOLTA/KO750UX.ppd, PPD/KONICA_MINOLTA/KOC250UX.ppd,
	  PPD/KONICA_MINOLTA/KOC252UX.ppd,
	  PPD/KONICA_MINOLTA/KOC351UX.ppd,
	  PPD/KONICA_MINOLTA/KOC352UX.ppd,
	  PPD/KONICA_MINOLTA/KOC450UX.ppd,
	  PPD/KONICA_MINOLTA/KOC451FX.ppd,
	  PPD/KONICA_MINOLTA/KOC451GX.ppd,
	  PPD/KONICA_MINOLTA/KOC451IX.ppd,
	  PPD/KONICA_MINOLTA/KOC451JX.ppd,
	  PPD/KONICA_MINOLTA/KOC451KX.ppd,
	  PPD/KONICA_MINOLTA/KOC451SCX.ppd,
	  PPD/KONICA_MINOLTA/KOC451SX.ppd,
	  PPD/KONICA_MINOLTA/KOC451TCX.ppd,
	  PPD/KONICA_MINOLTA/KOC451UX.ppd,
	  PPD/KONICA_MINOLTA/KOC550UX.ppd: Added GPL 2+ license header.

	* driver/Postscript-KONICA_MINOLTA.xml: Updated license info.

2009-11-23  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/HP-LaserJet_P2055dn.xml: Added HP LaserJet P2055dn
	  (bug #391).

2009-11-19  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Lexmark-C734.xml, printer/Lexmark-C736.xml,
	  printer/Lexmark-TG654.xml, printer/Lexmark-W850.xml,
	  printer/Lexmark-X203n.xml, printer/Lexmark-X204n.xml,
	  printer/Lexmark-X264dn.xml, printer/Lexmark-X363dn.xml,
	  printer/Lexmark-X364dn.xml, printer/Lexmark-X364dw.xml,
	  printer/Lexmark-X463de.xml, printer/Lexmark-X464de.xml,
	  printer/Lexmark-X466de.xml, printer/Lexmark-X466dte.xml,
	  printer/Lexmark-X466dwe.xml, printer/Lexmark-X651de.xml,
	  printer/Lexmark-X652de.xml, printer/Lexmark-X654de.xml,
	  printer/Lexmark-X656de.xml, printer/Lexmark-X658de.xml,
	  printer/Lexmark-X734de.xml, printer/Lexmark-X736de.xml,
	  printer/Lexmark-X738de.xml, printer/Lexmark-X860de.xml,
	  printer/Lexmark-X862de.xml, printer/Lexmark-X864de.xml: Added
	  printer XML files for the new Lexmark PPD files.

2009-11-19  Luchee Go <gol@lexmark.com>

	* PPD/Lexmark/Lexmark_C734.ppd,
	PPD/Lexmark/Lexmark_C736.ppd,
	PPD/Lexmark/Lexmark_TG654.ppd,
	PPD/Lexmark/Lexmark_W850.ppd,
	PPD/Lexmark/Lexmark_X203n.ppd,