@@ -1,4 +1,4 @@
-<option type="enum" id="opt/hpijs-PageSize">
+<option type="enum" id="opt/hpijs-pcl3-PageSize">
   <!-- A multilingual <comments> block can appear here, too;
        it should be treated as documentation for the user. -->
   <arg_longname>
@@ -17,11 +17,11 @@
   <constraints>
      <constraint sense='true'>
       <driver>hpijs-pcl3</driver>
-      <arg_defval>ev/hpijs-PageSize-Letter</arg_defval>
+      <arg_defval>ev/hpijs-pcl3-PageSize-Letter</arg_defval>
      </constraint>
   </constraints>
   <enum_vals>
-   <enum_val id="ev/hpijs-PageSize-Custom">
+   <enum_val id="ev/hpijs-pcl3-PageSize-Custom">
     <ev_longname>
      <en>Custom size</en>
     </ev_longname>
@@ -34,7 +34,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=0 -dDEVICEHEIGHTPOINTS=0</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-Letter">
+   <enum_val id="ev/hpijs-pcl3-PageSize-Letter">
     <ev_longname>
      <en>Letter</en>
     </ev_longname>
@@ -47,7 +47,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=612 -dDEVICEHEIGHTPOINTS=792</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-Legal">
+   <enum_val id="ev/hpijs-pcl3-PageSize-Legal">
     <ev_longname>
      <en>Legal</en>
     </ev_longname>
@@ -60,7 +60,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=612 -dDEVICEHEIGHTPOINTS=1008</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-Executive">
+   <enum_val id="ev/hpijs-pcl3-PageSize-Executive">
     <ev_longname>
      <en>Executive</en>
     </ev_longname>
@@ -73,7 +73,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=522 -dDEVICEHEIGHTPOINTS=756</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-A4">
+   <enum_val id="ev/hpijs-pcl3-PageSize-A4">
     <ev_longname>
      <en>A4</en>
     </ev_longname>
@@ -86,7 +86,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=595 -dDEVICEHEIGHTPOINTS=842</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-A5">
+   <enum_val id="ev/hpijs-pcl3-PageSize-A5">
     <ev_longname>
      <en>A5</en>
     </ev_longname>
@@ -99,7 +99,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=420 -dDEVICEHEIGHTPOINTS=595</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-Photo5x7">
+   <enum_val id="ev/hpijs-pcl3-PageSize-Photo5x7">
     <ev_longname>
      <en>Photo or 5x7 inch index card</en>
     </ev_longname>
@@ -112,7 +112,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=360 -dDEVICEHEIGHTPOINTS=504</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-A6">
+   <enum_val id="ev/hpijs-pcl3-PageSize-A6">
     <ev_longname>
      <en>A6</en>
     </ev_longname>
@@ -125,7 +125,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=297 -dDEVICEHEIGHTPOINTS=420</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-A6TearOff">
+   <enum_val id="ev/hpijs-pcl3-PageSize-A6TearOff">
     <ev_longname>
      <en>A6 with tear-off tab</en>
     </ev_longname>
@@ -138,7 +138,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=297 -dDEVICEHEIGHTPOINTS=420</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-Photo">
+   <enum_val id="ev/hpijs-pcl3-PageSize-Photo">
     <ev_longname>
      <en>Photo or 4x6 inch index card</en>
     </ev_longname>
@@ -151,7 +151,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=288 -dDEVICEHEIGHTPOINTS=432</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-PhotoTearOff">
+   <enum_val id="ev/hpijs-pcl3-PageSize-PhotoTearOff">
     <ev_longname>
      <en>Photo with tear-off tab</en>
     </ev_longname>
@@ -164,7 +164,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=288 -dDEVICEHEIGHTPOINTS=432</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-B5JIS">
+   <enum_val id="ev/hpijs-pcl3-PageSize-B5JIS">
     <ev_longname>
      <en>B5 (JIS)</en>
     </ev_longname>
@@ -177,7 +177,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=516 -dDEVICEHEIGHTPOINTS=729</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-Oufuku">
+   <enum_val id="ev/hpijs-pcl3-PageSize-Oufuku">
     <ev_longname>
      <en>Oufuku-Hagaki</en>
     </ev_longname>
@@ -190,7 +190,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=420 -dDEVICEHEIGHTPOINTS=567</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-Hagaki">
+   <enum_val id="ev/hpijs-pcl3-PageSize-Hagaki">
     <ev_longname>
      <en>Hagaki</en>
     </ev_longname>
@@ -203,7 +203,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=283 -dDEVICEHEIGHTPOINTS=420</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-FLSA">
+   <enum_val id="ev/hpijs-pcl3-PageSize-FLSA">
     <ev_longname>
      <en>American Foolscap</en>
     </ev_longname>
@@ -216,7 +216,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=612 -dDEVICEHEIGHTPOINTS=936</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-Env10">
+   <enum_val id="ev/hpijs-pcl3-PageSize-Env10">
     <ev_longname>
      <en>Envelope #10</en>
     </ev_longname>
@@ -229,7 +229,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=297 -dDEVICEHEIGHTPOINTS=684</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-EnvMonarch">
+   <enum_val id="ev/hpijs-pcl3-PageSize-EnvMonarch">
     <ev_longname>
      <en>Envelope Monarch</en>
     </ev_longname>
@@ -242,7 +242,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=279 -dDEVICEHEIGHTPOINTS=540</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-EnvDL">
+   <enum_val id="ev/hpijs-pcl3-PageSize-EnvDL">
     <ev_longname>
      <en>Envelope DL</en>
     </ev_longname>
@@ -255,7 +255,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=312 -dDEVICEHEIGHTPOINTS=624</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-EnvC5">
+   <enum_val id="ev/hpijs-pcl3-PageSize-EnvC5">
     <ev_longname>
      <en>Envelope C5</en>
     </ev_longname>
@@ -268,7 +268,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=459 -dDEVICEHEIGHTPOINTS=649</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-EnvC6">
+   <enum_val id="ev/hpijs-pcl3-PageSize-EnvC6">
     <ev_longname>
      <en>Envelope C6</en>
     </ev_longname>
@@ -281,7 +281,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=323 -dDEVICEHEIGHTPOINTS=459</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-EnvISOB5">
+   <enum_val id="ev/hpijs-pcl3-PageSize-EnvISOB5">
     <ev_longname>
      <en>Envelope B5</en>
     </ev_longname>
@@ -294,7 +294,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=499 -dDEVICEHEIGHTPOINTS=709</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-3x5">
+   <enum_val id="ev/hpijs-pcl3-PageSize-3x5">
     <ev_longname>
      <en>3x5 inch index card</en>
     </ev_longname>
@@ -307,7 +307,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=216 -dDEVICEHEIGHTPOINTS=360</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-5x8">
+   <enum_val id="ev/hpijs-pcl3-PageSize-5x8">
     <ev_longname>
      <en>5x8 inch index card</en>
     </ev_longname>
@@ -320,7 +320,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=360 -dDEVICEHEIGHTPOINTS=576</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-w612h935">
+   <enum_val id="ev/hpijs-pcl3-PageSize-w612h935">
     <ev_longname>
      <en>Executive (JIS)</en>
     </ev_longname>
@@ -333,7 +333,7 @@
     </ev_shortname>
     <ev_driverval> -dDEVICEWIDTHPOINTS=612 -dDEVICEHEIGHTPOINTS=935</ev_driverval>
    </enum_val>
-   <enum_val id="ev/hpijs-PageSize-w558h774">
+   <enum_val id="ev/hpijs-pcl3-PageSize-w558h774">
     <ev_longname>
      <en>16K</en>
     </ev_longname>
