@@ -1,3 +1,7 @@
+2009-11-26  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* opt/hpijs-pcl3-PageSize.xml: Corrected option ID.
+
 2009-11-24  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* PPD/KONICA_MINOLTA/KO1050UX.ppd, PPD/KONICA_MINOLTA/KO500UX.ppd,
